# pyUDE

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
_generate_notebooks/: index.html
api/analysis/: index.html
api/custom_derivatives/: index.html
api/custom_differences/: index.html
api/node/: index.html
choosing-backend/: index.html
concepts/: index.html
docs/: choosing-backend.md  concepts.md  index.md  installation.md  troubleshooting.md
docs/api/: analysis.md  custom_derivatives.md  custom_differences.md  node.md
docs/guides/: julia-setup.md  known-dynamics.md  quickstart.md
docs/tutorials/: 06_parameter_recovery.ipynb
guides/julia-setup/: index.html
guides/known-dynamics/: index.html
guides/quickstart/: index.html
installation/: index.html
julia/: Project.toml  pyude_bridge.jl
notebooks/: 01_quickstart.ipynb  02_gpu_acceleration.ipynb  03_validation_evaluation.ipynb  04_regularization.ipynb  05_cross_validation.ipynb  06_parameter_recovery.ipynb  07_custom_networks.ipynb  08_julia_backend.ipynb  _generate_notebooks.py
search/: search_index.json
src/pyUDE/: __init__.py  pyUDE.py
src/pyUDE/analysis/: __init__.py  (+3 more)
tests/: conftest.py
tests/integration/: test_custom_derivatives.py  test_julia_backend.py  test_node.py  test_state_space.py
tests/unit/: test_data.py  test_metrics.py  test_safeguards.py  test_splitting.py
troubleshooting/: index.html
tutorials/01_quickstart/: 01_quickstart.ipynb  index.html
tutorials/02_gpu_acceleration/: index.html
(+26 files in other folders)
